--- a/web/odeme/create.xhtml
+++ b/web/odeme/create.xhtml
@@ -17,7 +17,7 @@
                     <h:inputText styleClass="form-control" value="#{odemeBean.entity.odeme_turu}" />
                 </div>
                 <div class="form-group">
-                    <label >Ilac</label>
+                    <label >Odeme</label>
                     <br/>
                     <h:selectOneMenu value="#{odemeBean.entity.ilac}" converter="ilacConverter">
                         <f:selectItems value="#{ilacBean.read}" var="i" itemLabel="#{i.name}" itemValue="#{i}"/>
