--- a/web/hasta/list.xhtml
+++ b/web/hasta/list.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <div class="container mt-4">
             <h:form>
-                <h:commandButton styleClass="btn btn-outline-primary" action="/hasta/create" value="Create new Patient"/>
+                <h:commandButton styleClass="btn btn-outline-primary" action="/hasta/create" value="Yeni Hasta Ekle"/>
                 <hr/>
                 <h:dataTable styleClass="table table-hover" value="#{hastaBean.read}" var="i">
 
