--- a/web/ilac/list.xhtml
+++ b/web/ilac/list.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <div class="container mt-4">
             <h:form>
-                <h:commandButton styleClass="btn btn-outline-primary" action="/ilac/create" value="Create new medicine"/>
+                <h:commandButton styleClass="btn btn-outline-primary" action="/ilac/create" value="Yeni Ilaç Ekle"/>
                 <hr/>
                 <h:dataTable styleClass="table table-hover" value="#{ilacBean.read}" var="i">
 
