--- a/web/odeme/list.xhtml
+++ b/web/odeme/list.xhtml
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      template="/template/admin.xhtml">
-    
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="/template/admin.xhtml">
+
     <ui:define name="content">
         <div class="container mt-4">
             <h:form>
@@ -26,9 +26,14 @@
                             #{i.odeme_turu}
                     </h:column>
                     <h:column>
-                      
-                        <f:facet name="header">ILAC</f:facet>
-                            #{i.ilac.name}
+                        <ul>
+                        <f:facet name="header">Firma ID</f:facet>
+                        <ui:repeat value="#{i.firmais}" var="k">
+                            <li>
+                                #{k.firma_name}
+                            </li>
+                        </ui:repeat>
+                        </ul>
                     </h:column>
                     <h:column>
                         <f:facet name="header">CREATED</f:facet>
@@ -37,13 +42,13 @@
                     <h:column>
                         <f:facet name="header">ADMINISTRATION</f:facet>
                         <div class="btn-group" role="group" >
-                        <h:commandButton styleClass="btn btn-warning" action="#{odemeBean.updateForm(i)}" value="UPDATE"/>
-                        <h:commandButton styleClass="btn btn-danger" action="#{odemeBean.delete(i)}" value="DELETE"/>
+                            <h:commandButton styleClass="btn btn-warning" action="#{odemeBean.updateForm(i)}" value="UPDATE"/>
+                            <h:commandButton styleClass="btn btn-danger" action="#{odemeBean.delete(i)}" value="DELETE"/>
                         </div>
                     </h:column>
                 </h:dataTable>
             </h:form>
         </div>
-        </ui:define> 
+    </ui:define> 
 </ui:composition>
 
